app_messages/appmessages.yaml
apiVersion: v1
kind: Service
metadata:
  name: appmessages
  namespace: dev
  labels:
    app: appmessages
    service: appmessages
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8080
  selector:
    app: appmessages
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appmessages
  namespace: dev
  labels:
    app: appmessages
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appmessages
  template:
    metadata:
      labels:
        app: appmessages
    spec:
      serviceAccountName: appmessages
      containers:
        - name: details
          image: docker-app-messages:0.0.40
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          securityContext:
            runAsUser: 1000
---
