app_messages/istio-gateway-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: appmessages-gateway
  namespace: dev
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
      tls:
        httpsRedirect: false

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: appmessages-vs
  namespace: dev
spec:
  hosts:
    - "*"
  gateways:
    - appmessages-gateway
  http:
    - name: "appmessages-route"
      route:
        - destination:
            host: appmessages
            port:
              number: 8080
